--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "fzaninotto/faker": "^1.7"
+        "fzaninotto/faker": "^1.7",
+        "illuminate/database": "^5.5"
     }
 }
